Bug 1044595 - Fix default/active button text on OS X 10.10, including fixes for bug 1068913, bug 1072992 and bug 1076252 for update dialog and in-content alerts as well as disabled buttons. r=mstange, r=jaws, r=dao, a=lmandel

--HG--
extra : rebase_source : 6c9e5fc94532af761d67a10c54cbb6ff65dbee1c